--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^7.1.0",
     "@mui/material-nextjs": "^7.1.0",
     "@splinetool/react-spline": "^4.0.0",
+    "@splinetool/runtime": "^1.10.19",
     "motion": "^12.18.1",
     "next": "15.3.3",
     "react": "^19.0.0",
