--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@splinetool/runtime": "^1.10.19",
     "motion": "^12.23.12",
     "next": "15.3.3",
+    "nodemailer": "^7.0.5",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "redis": "^5.8.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
