--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "babel-plugin-react-compiler": "^19.1.0-rc.2",
     "eslint": "^9",
-    "eslint-config-next": "15.3.3"
+    "eslint-config-next": "15.3.3",
+    "eslint-plugin-react-hooks": "^6.0.0-rc.1"
   }
 }
