--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "15.3.3",
     "nodemailer": "^7.0.5",
     "react": "^19.0.0",
+    "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^19.0.0",
     "redis": "^5.8.2"
   },
